deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-todo-app-deployment
  labels:
    app: node-todo-app
  namespace: node-todo-app 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-todo-app
  template:
    metadata:
      labels:
        app: node-todo-app
    spec:
      containers:
      - name: node-todo-ctr
        image: rimpybala/node-todo-test:latest
        ports:
        - containerPort: 8000
