pod.yaml
apiVersion : v1
kind: Pod
metadata: 
 name: node-todo-pod
 namespace: node-todo-app
spec: 
  containers:
    - name: node-todo-ctr
      image: rimpybala/node-todo-test:latest
      ports: 
        - containerPort: 8000
