service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-todo-service
  namespace: node-todo-app

spec:
  type: LoadBalancer
  selector:
    app: node-todo-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
