ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-rimpy-node
  namespace: node-todo-app
spec:
  rules:
  - host: "node-todo-example-batch-2.info"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: node-todo-service
              port:
                number: 80
